[tool.poetry]
name = "repl-html-rusk-games"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_html_rusk_games"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
